# solid-tailwind-tauri-bun

./: .dockerignore  Dockerfile  LICENSE  package.json  vite.config.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
