[package]
name = "nayud"
version = "1.0.0"
authors = ["Dimas Yudha Pratama <nayud@dimasyudha.com>"]
description = ""
edition = "2024"
homepage = "https://nayud.dimasyudha.com"
license = "MIT"
license-file = "../LICENSE"
repository = "https://github.com/pingdimasyudha/solid-tailwind-tauri-bun"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nayud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-opener = "2.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-notification = { version = "2.2.2", features = ["windows7-compat"]}
tauri-plugin-os = "2.2.1"
